--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -14,76 +14,81 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    {
+      Astro.url.pathname === "/" && (
+        <script src="https://aframe.io/releases/0.5.0/aframe.min.js" />
+      )
+    }
+
     <title>{title}</title>
   </head>
-  <body>
-    <slot />
-  </body>
+  <slot />
+
+  <style is:global>
+    *,
+    *::after,
+    *::before {
+      box-sizing: border-box;
+      padding: 0;
+      margin: 0;
+      min-width: 0;
+    }
+    :root {
+      --accent: 136, 58, 234;
+      --accent-light: 224, 204, 250;
+      --accent-dark: 49, 10, 101;
+      --accent-gradient: linear-gradient(
+        45deg,
+        rgb(var(--accent)),
+        rgb(var(--accent-light)) 30%,
+        white 60%
+      );
+    }
+    html {
+      font-family: system-ui, sans-serif;
+      background-size: 224px;
+    }
+    code {
+      font-family:
+        Menlo,
+        Monaco,
+        Lucida Console,
+        Liberation Mono,
+        DejaVu Sans Mono,
+        Bitstream Vera Sans Mono,
+        Courier New,
+        monospace;
+    }
+
+    .btn-white-50 {
+      background-color: rgba(255, 255, 255, 0.5);
+      color: black;
+    }
+
+    .btn-white {
+      background-color: white;
+      color: black;
+    }
+
+    .btn-black {
+      background-color: black;
+      color: white;
+    }
+
+    .btn {
+      padding: 0.5rem;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-weight: normal;
+      font-size: 1rem;
+    }
+  </style>
 </html>
-<style is:global>
-  *,
-  *::after,
-  *::before {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    min-width: 0;
-  }
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background-size: 224px;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
-
-  .btn-white-50 {
-    background-color: rgba(255, 255, 255, 0.5);
-    color: black;
-  }
-
-  .btn-white {
-    background-color: white;
-    color: black;
-  }
-
-  .btn-black {
-    background-color: black;
-    color: white;
-  }
-
-  .btn {
-    padding: 0.5rem;
-    border-radius: 5px;
-    text-decoration: none;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: normal;
-    font-size: 1rem;
-  }
-</style>
