--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,11 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { fetchBooks } from "../data/api";
-import type { Book } from "../data/api";
-import { Image } from "astro:assets";
-import lib from "../../public/lib.png";
-
-const books: Book[] = (await fetchBooks()) || [];
 ---
 
 <Layout title="Digital Library">
@@ -21,22 +15,23 @@ const books: Book[] = (await fetchBooks()) || [];
         <a href="/gallery" class="btn btn-white">Gallery</a>
       </div>
     </header>
-    <a-scene vr-mode-ui="enabled: false">
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"
-      ></a-cylinder>
-      <a-plane
-        position="0 0 -4"
-        rotation="-90 0 0"
-        width="4"
-        height="4"
-        color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
-    </a-scene>
-
-    <div class="image">
-      <!-- <Image src={lib} alt="Library" /> -->
+    <div class="exp">
+      <a-scene vr-mode-ui="enabled: false">
+        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+        <a-cylinder
+          position="1 0.75 -3"
+          radius="0.5"
+          height="1.5"
+          color="#FFC65D"></a-cylinder>
+        <a-plane
+          position="0 0 -4"
+          rotation="-90 0 0"
+          width="4"
+          height="4"
+          color="#7BC8A4"></a-plane>
+        <a-sky color="#ECECEC"></a-sky>
+      </a-scene>
     </div>
 
     <footer>
