Update book sorting in API and fix book page props

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -11,7 +11,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <div class="right">
-        <a href="/books" class="btn btn-white">Books</a>
+        <a href="/book" class="btn btn-white">Books</a>
         <a href="/gallery" class="btn btn-white">Gallery</a>
       </div>
     </header>
