--- a/frontend/src/pages/book/[book].astro
+++ b/frontend/src/pages/book/[book].astro
@@ -1,22 +1,23 @@
 ---
-import type { GetStaticPaths, InferGetStaticParamsType } from "astro";
+import type { InferGetStaticParamsType } from "astro";
 import Layout from "@layouts/Layout.astro";
 import { fetchBooks, fetchBook } from "@data/api";
 import type { Book } from "@data/api";
 
-export const getStaticPaths = (async () => {
+export async function getStaticPaths() {
   const books = await fetchBooks();
-  return (
-    books?.map((book: Book) => ({
-      params: { slug: book.slug },
-    })) ?? []
-  );
-}) satisfies GetStaticPaths;
+  return books?.map((book: Book) => ({
+    params: { slug: book.slug },
+    props: { book },
+  }));
+}
 
 type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 const { slug } = Astro.params as Params;
+const { book } = Astro.props as { book: Book };
 
-const book = await fetchBook(slug);
+// const book = await fetchBook(slug);
+console.log(book);
 ---
 
 <Layout title="Digital Library">
