--- a/frontend/src/pages/book/index.astro
+++ b/frontend/src/pages/book/index.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import { Image } from "astro:assets";
-import lib from "/public/lib.png";
+import BookList from "@components/BookList.astro";
 import { fetchBooks } from "@data/api";
 import type { Book } from "@data/api";
 
@@ -51,138 +50,7 @@ const books: Book[] = (await fetchBooks()) || [];
       </div>
     </div>
 
-    <div class="books">
-
-        {
-                books.map((book)=>(
-                        <div class="book">
-                                <div class="image">
-                                        {
-                                                book.files.map((file)=>(
-                                                        file.type === "image" ? <Image src={file.url} alt={book.title} width=100 height=100 /> : null
-                                                ))
-                                        }
-                                </div>
-        
-                                <div class="info">
-                                <h2>{book.title}</h2>
-                                <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni facilis expedita quos quaerat nihil perferendis, similique, commodi inventore rerum voluptates ullam neque libero quidem saepe eaque aliquid harum aut sunt.
-                                </p>
-                                </div>
-                        </div>
-                ))
-        }
-      <div class="book">
-        <div class="image">
-          <Image src={lib} alt="Library" />
-        </div>
-
-        <div class="info">
-          <h2>Name</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-            neque possimus rerum, molestias officia soluta sequi laboriosam
-            suscipit in pariatur expedita dolore dignissimos doloremque velit!
-            Tempore amet deleniti possimus eius!
-          </p>
-        </div>
-      </div>
-      <div class="book">
-        <div class="image">
-          <Image src={lib} alt="Library" />
-        </div>
-
-        <div class="info">
-          <h2>Name</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-            neque possimus rerum, molestias officia soluta sequi laboriosam
-            suscipit in pariatur expedita dolore dignissimos doloremque velit!
-            Tempore amet deleniti possimus eius!
-          </p>
-        </div>
-      </div>
-      <div class="book">
-        <div class="image">
-          <Image src={lib} alt="Library" />
-        </div>
-
-        <div class="info">
-          <h2>Name</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-            neque possimus rerum, molestias officia soluta sequi laboriosam
-            suscipit in pariatur expedita dolore dignissimos doloremque velit!
-            Tempore amet deleniti possimus eius!
-          </p>
-        </div>
-      </div>
-      <div class="book">
-        <div class="image">
-          <Image src={lib} alt="Library" />
-        </div>
-
-        <div class="info">
-          <h2>Name</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-            neque possimus rerum, molestias officia soluta sequi laboriosam
-            suscipit in pariatur expedita dolore dignissimos doloremque velit!
-            Tempore amet deleniti possimus eius!
-          </p>
-        </div>
-      </div>
-      <div class="book">
-        <div class="image">
-          <Image src={lib} alt="Library" />
-        </div>
-
-        <div class="info">
-          <h2>Name</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-            neque possimus rerum, molestias officia soluta sequi laboriosam
-            suscipit in pariatur expedita dolore dignissimos doloremque velit!
-            Tempore amet deleniti possimus eius!
-          </p>
-        </div>
-      </div>
-      <div class="book">
-        <div class="image">
-          <Image src={lib} alt="Library" />
-        </div>
-
-        <div class="info">
-          <h2>Name</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-            neque possimus rerum, molestias officia soluta sequi laboriosam
-            suscipit in pariatur expedita dolore dignissimos doloremque velit!
-            Tempore amet deleniti possimus eius!
-          </p>
-        </div>
-      </div>
-      <div class="book">
-        <div class="image">
-          <Image src={lib} alt="Library" />
-        </div>
-
-        <div class="info">
-          <h2>Name</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae
-            neque possimus rerum, molestias officia soluta sequi laboriosam
-            suscipit in pariatur expedita dolore dignissimos doloremque velit!
-            Tempore amet deleniti possimus eius!
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="image">
-      <!-- <Image src={lib} alt="Library" /> -->
-    </div>
+    <BookList books={books} />
   </main>
 </Layout>
 
@@ -225,50 +93,6 @@ const books: Book[] = (await fetchBooks()) || [];
       stroke-width: 2;
       stroke-linecap: round;
       stroke-linejoin: round;
-    }
-  }
-
-  .books {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 1rem;
-    padding: 1rem;
-
-    .book {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        padding: 1rem;
-        
-        .image {
-          aspect-ratio: 1/2;
-          width: 100%;
-          height: 20rem;
-          overflow: hidden;
-          
-          img{
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-                  
-          }
-        }
-        
-        .info {
-          h2 {
-                font-weight: bold;
-            margin-bottom: 0.5rem;
-          }
-        }
-            
-    }
-  }
-
-  .image {
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
     }
   }
 </style>
