--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,20 +1,11 @@
 ---
+import Header from "@components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Digital Library">
   <main>
-    <header>
-      <div class="left">
-        <a href="/" class="btn btn-black">OFFICE00</a>
-        <a href="/about" class="btn btn-white">About</a>
-      </div>
-
-      <div class="right">
-        <a href="/book" class="btn btn-white">Books</a>
-        <a href="/gallery" class="btn btn-white">Gallery</a>
-      </div>
-    </header>
+    <Header />
     <div class="exp">
       <a-scene vr-mode-ui="enabled: false">
         <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
@@ -70,12 +61,6 @@ import Layout from "../layouts/Layout.astro";
     width: 100svw;
     color: white;
     line-height: 1.6;
-  }
-
-  header {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
   }
 
   footer {
