--- a/frontend/src/pages/book/[slug].astro
+++ b/frontend/src/pages/book/[slug].astro
@@ -29,20 +29,7 @@ const { book } = Astro.props as { book: Book };
       </div>
 
       <div class="right">
-        <a href="" class="btn-svg">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <line x1="18" y1="6" x2="6" y2="18"></line>
-            <line x1="6" y1="6" x2="18" y2="18"></line>
-          </svg>
-        </a>
+        <button id="hypothesis">Annotate</button>
       </div>
     </header>
     <div class="pdf">
@@ -54,9 +41,7 @@ const { book } = Astro.props as { book: Book };
           height="100%"></iframe>
       </div>
 
-      <div class="pdf__panel">
-        <button id="hypothesis">Annotate</button>
-      </div>
+      <div class="pdf__panel"></div>
     </div>
   </main>
 </Layout>
@@ -83,20 +68,15 @@ const { book } = Astro.props as { book: Book };
     justify-content: space-between;
     padding: 1rem;
     height: 3.5rem;
-    .btn-svg {
-      width: 100%;
-      height: 100%;
-      svg {
-        border-radius: 0.5rem;
-        background-color: black;
-        width: 2rem;
-        height: 2rem;
-        fill: none;
-        stroke: beige;
-        stroke-width: 2;
-        stroke-linecap: round;
-        stroke-linejoin: round;
-      }
+
+    button {
+      padding: 0.5rem 1rem;
+      background-color: black;
+      color: white;
+      border: none;
+      border-radius: 0.25rem;
+      cursor: pointer;
+      font-size: 1rem;
     }
   }
 
