--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Header from "@components/Header.astro";
-import Layout from "../layouts/Layout.astro";
+import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Digital Library">
@@ -8,20 +8,24 @@ import Layout from "../layouts/Layout.astro";
     <Header />
     <div class="exp">
       <a-scene vr-mode-ui="enabled: false">
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-        <a-cylinder
-          position="1 0.75 -3"
-          radius="0.5"
-          height="1.5"
-          color="#FFC65D"></a-cylinder>
+        <a-assets>
+          <img id="skyTexture" src="/pano/01.jpeg" alt="sky" />
+        </a-assets>
+        <a-sky src="#skyTexture"></a-sky>
+        <a-text
+          value="Library"
+          width="6"
+          position="-10.0 2.25 -1.5"
+          rotation="0 30 0"></a-text>
+
+        <!-- a white plane with 50% opacity -->
         <a-plane
-          position="0 0 -4"
-          rotation="-90 0 0"
-          width="4"
-          height="4"
-          color="#7BC8A4"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
+          color="#fff"
+          opacity="0.5"
+          width="0.8"
+          height="0.23"
+          rotation="0 -50 -7"
+          position="0.08 1.63 -1"></a-plane>
       </a-scene>
     </div>
 
