--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -19,13 +19,16 @@ import Layout from "@layouts/Layout.astro";
           rotation="0 30 0"></a-text>
 
         <!-- a white plane with 50% opacity -->
-        <a-plane
-          color="#fff"
-          opacity="0.5"
-          width="0.8"
-          height="0.23"
-          rotation="0 -50 -7"
-          position="0.08 1.63 -1"></a-plane>
+        <a-entity id="stacks">
+          <a-plane
+            class="stack"
+            color="#fff"
+            opacity="0.5"
+            width="0.8"
+            height="0.23"
+            rotation="0 -50 -7"
+            position="0.08 1.63 -1"></a-plane>
+        </a-entity>
       </a-scene>
     </div>
 
@@ -53,6 +56,22 @@ import Layout from "@layouts/Layout.astro";
       }
     });
   }
+
+  console.log("Hello from the Digital Library");
+
+  AFRAME.registerComponent("stacks", {
+    init: function () {
+      const sceneEl = this.el;
+      const stack = sceneEl.querySelectorAll(".stack");
+      console.log(stack);
+      // on click alert the stack number
+      stack.forEach((stack, index) => {
+        stack.addEventListener("click", () => {
+          alert(`You clicked on stack ${index + 1}`);
+        });
+      });
+    },
+  });
 
   window.onload = function () {
     toggleHypothesis();
