--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "@layouts/Layout.astro";
   <main>
     <Header />
     <div class="exp">
-      <a-scene vr-mode-ui="enabled: false">
+      <a-scene xr-mode-ui="enabled: false">
         <a-assets>
           <img id="skyTexture" src="/pano/01.jpeg" alt="sky" />
         </a-assets>
@@ -25,10 +25,10 @@ import Layout from "@layouts/Layout.astro";
             class="stack"
             color="#fff"
             opacity="0.5"
-            width="0.8"
-            height="0.23"
+            width="1.3"
+            height="0.29"
             rotation="0 -50 -7"
-            position="0.08 1.63 -1"></a-plane>
+            position="0.23 1.59 -1"></a-plane>
         </a-entity>
         <a-entity cursor="rayOrigin:mouse" raycaster="objects: .stack"
         ></a-entity>
@@ -100,12 +100,12 @@ import Layout from "@layouts/Layout.astro";
     bottom: 1rem;
   }
 
-  .image {
+  .exp {
     position: absolute;
     inset: 0;
     width: 100svw;
     height: 100svh;
-    z-index: -1;
+    /* z-index: -1; */
 
     img {
       width: 100%;
