chore: Update npm dependencies and Astro configuration for Solid.js integration

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -31,11 +31,11 @@ import Layout from "@layouts/Layout.astro";
   </main>
 </Layout>
 
-<footer>
+<!-- <footer>
   <div class="right">
     <h2 class="btn btn-white-50">You are now exploring Stack 2</h2>
   </div>
-</footer>
+</footer> -->
 
 <script>
   function toggleHypothesis() {
