--- a/frontend/src/pages/gallery/index.astro
+++ b/frontend/src/pages/gallery/index.astro
@@ -1,13 +1,8 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import BookList from "@components/BookList.astro";
-import { fetchBooks } from "@data/api";
-import type { Book } from "@/types";
-
-const books: Book[] = (await fetchBooks()) || [];
 ---
 
-<Layout title="Digital Library">
+<Layout title="Gallery">
   <main>
     <header>
       <div class="left">
@@ -50,7 +45,7 @@ const books: Book[] = (await fetchBooks()) || [];
       </div>
     </div>
 
-    <BookList books={books} />
+    <p>Gallery</p>
   </main>
 </Layout>
 
@@ -65,34 +60,5 @@ const books: Book[] = (await fetchBooks()) || [];
     display: flex;
     justify-content: space-between;
     padding: 1rem;
-  }
-
-  .filter-container {
-    display: flex;
-    gap: 1rem;
-    padding-inline: 1rem;
-
-    select {
-      padding-inline: 0.5rem;
-      border-radius: 0.5rem;
-      border: none;
-    }
-  }
-
-  .btn-svg {
-    width: 100%;
-    height: 100%;
-
-    svg {
-      border-radius: 0.5rem;
-      background-color: black;
-      width: 2rem;
-      height: 2rem;
-      fill: none;
-      stroke: beige;
-      stroke-width: 2;
-      stroke-linecap: round;
-      stroke-linejoin: round;
-    }
   }
 </style>
