--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -65,7 +65,7 @@ import Layout from "@layouts/Layout.astro";
 </script>
 
 <script is:inline>
-  AFRAME.registerComponent("clickhandler", {
+  AFRAME?.registerComponent("clickhandler", {
     schema: {
       txt: { default: "default" },
     },
