--- a/frontend/src/components/BookCard.astro
+++ b/frontend/src/components/BookCard.astro
@@ -1,5 +1,5 @@
 ---
-import type { Book } from "@data/api";
+import type { Book } from "@/types";
 import { Image } from "astro:assets";
 const { book } = Astro.props as { book: Book };
 ---
