--- a/frontend/src/components/BookList.astro
+++ b/frontend/src/components/BookList.astro
@@ -1,6 +1,5 @@
 ---
-import type { Book } from "@data/api";
-import { Image } from "astro:assets";
+import type { Book } from "@/types";
 import BookCard from "./BookCard.astro";
 const { books } = Astro.props as { books: Book[] };
 ---
